--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <script>
     const PROJECT_ID = "jmildwxjaviqkrkhjzhl"; // Il tuo ID progetto
     const _supabase = supabase.createClient(localStorage.getItem('sb-url'), localStorage.getItem('sb-key'));
-    const ADMIN_EMAIL = "TUA_EMAIL_QUI@GMAIL.COM"; // <--- CAMBIA QUESTA!
+    const ADMIN_EMAIL = "marcobolge@gmail.com"; 
 
     async function init() {
         checkAdmin();
