--- a/index.html
+++ b/index.html
@@ -74,15 +74,23 @@
             </div>
 
             <div id="shop-packs" class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-10"></div>
-            <div class="mb-6">
-                <div class="relative">
-                    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
-                        <span class="text-gray-500 text-lg">🔍</span>
+            <div class="mb-8 max-w-md mx-auto">
+                <div class="relative group">
+                    <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
+                        <span class="text-gray-400 group-focus-within:text-green-600 transition text-lg">🔎</span>
                     </div>
                     <input type="text" id="search-bar" onkeyup="app.filterProducts()" 
-                           placeholder="Cerca accetta, tenda, cordino..." 
-                           class="w-full pl-10 p-3 border-2 border-gray-200 rounded-xl focus:border-green-500 outline-none transition shadow-sm">
+                           placeholder="Cerca equipaggiamento (es. Tenda, Accetta...)" 
+                           class="w-full pl-12 p-4 border-2 border-gray-200 rounded-2xl focus:border-green-600 focus:ring-4 focus:ring-green-100 outline-none transition shadow-sm bg-white text-gray-700 font-bold text-lg placeholder-gray-400">
+                    
+                    <button onclick="document.getElementById('search-bar').value = ''; app.filterProducts()" class="absolute inset-y-0 right-0 pr-4 text-gray-300 hover:text-red-500 font-bold cursor-pointer transition">✕</button>
                 </div>
+            </div>
+            
+            <div id="no-results" class="hidden text-center py-10">
+                <div class="text-4xl mb-2">🤷‍♂️</div>
+                <p class="text-gray-400 font-bold">Nessun oggetto trovato.</p>
+                <p class="text-gray-300 text-xs">Prova a cercare qualcos'altro.</p>
             </div>
             <h3 class="font-bold text-gray-700 mb-4 flex items-center gap-2">📦 Materiale Sfuso <span class="h-px bg-gray-300 flex-grow"></span></h3>
             <div id="shop-products" class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4"></div>
