--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <button onclick="app.nav('shop')" class="hover:text-yellow-400 transition text-xs md:text-sm font-medium uppercase tracking-wide">Magazzino</button>
                     <button onclick="app.nav('archive')" class="hover:text-yellow-400 transition text-xs md:text-sm font-medium uppercase tracking-wide">Ricordi</button>
                     <button onclick="ui.toggleCart()" class="bg-white text-green-900 px-2 py-1 md:px-3 md:py-1 rounded-full hover:bg-yellow-300 transition flex items-center gap-2 shadow-sm text-xs md:text-sm font-bold border-2 border-transparent hover:border-green-800">
-                        🛒 <span id="cart-count">0</span>
+                        🎒 <span id="cart-count">0</span>
                     </button>
                     <button onclick="ui.modal('login-modal')" class="bg-green-800 hover:bg-green-700 px-2 py-1 md:px-3 rounded text-[10px] md:text-xs font-bold uppercase tracking-wider border border-green-700">Login</button>
                 </div>
@@ -60,7 +60,7 @@
         <section id="view-shop" class="hidden fade-in">
             <div class="mb-4 border-b border-gray-200 pb-2">
                 <h1 class="text-2xl md:text-4xl font-extrabold text-green-900">Magazzino</h1>
-                <p class="text-gray-500 text-xs md:text-sm mt-1">Prendi il necessario, lascia meglio di come trovi.</p>
+                <p class="text-gray-500 text-xs md:text-sm mt-1">Prendi il necessario, lascia il magazzino un po' migliore di come l'hai trovato</p>
             </div>
 
             <div id="shop-packs" class="grid grid-cols-1 md:grid-cols-3 gap-3 mb-6"></div>
@@ -71,7 +71,7 @@
                         <span class="text-gray-400 text-lg">🔎</span>
                     </div>
                     <input type="text" id="search-bar" onkeyup="app.filterProducts()" 
-                           placeholder="Cerca (es. Tenda, Accetta...)" 
+                           placeholder="Cerca (es. Promessa EG, Nodo...)" 
                            class="w-full pl-10 p-3 border border-gray-300 rounded-xl focus:border-green-600 focus:ring-2 focus:ring-green-100 outline-none transition shadow-sm bg-white text-gray-700 font-bold text-sm">
                     <button onclick="document.getElementById('search-bar').value = ''; app.filterProducts()" class="absolute inset-y-0 right-0 pr-4 text-gray-300 hover:text-red-500 font-bold cursor-pointer">✕</button>
                 </div>
@@ -113,7 +113,7 @@
                     <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-green-600 transition">📦 Inventario</button>
                     <button onclick="admin.tab('restock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-blue-500 transition">🚛 Rifornimento</button>
                     <button onclick="admin.tab('packs')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-yellow-500 transition">🎁 Kit</button>
-                    <button onclick="admin.tab('mod')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-red-500 transition flex justify-between">
+                    <button onclick="admin.tab('Richieste Aneddoti')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-red-500 transition flex justify-between">
                         🛡 Mod <span id="mod-badge" class="bg-red-500 text-white text-[10px] px-1.5 rounded-full hidden">0</span>
                     </button>
                     <button onclick="admin.tab('history')" class="col-span-2 lg:col-auto w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-purple-500 transition">
@@ -178,7 +178,7 @@
         <div id="cart-items" class="flex-1 overflow-y-auto p-4 space-y-3 bg-gray-50 pb-20"></div>
         <div class="p-4 border-t bg-white absolute bottom-0 w-full">
             <button onclick="cart.empty()" class="w-full text-red-400 text-xs font-bold mb-2 text-center">SVUOTA</button>
-            <input type="text" id="checkout-name" placeholder="Chi sei? (Es. Marco Sq. Volpi)" class="w-full p-3 border-2 border-gray-200 rounded-lg mb-2 text-sm font-bold">
+            <input type="text" id="checkout-name" placeholder="Chi sei-Branca? " class="w-full p-3 border-2 border-gray-200 rounded-lg mb-2 text-sm font-bold">
             <button onclick="app.checkout()" class="w-full bg-green-700 text-white font-bold py-3 rounded-lg shadow-lg">PRELEVA</button>
         </div>
     </div>
