--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                     <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-green-600 transition">📦 Inventario</button>
                     <button onclick="admin.tab('restock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-blue-500 transition">🚛 Rifornimento</button>
                     <button onclick="admin.tab('packs')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-yellow-500 transition">🎁 Kit</button>
-                    <button onclick="admin.tab('Richieste Aneddoti')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-red-500 transition flex justify-between">
-                        🛡 Mod <span id="mod-badge" class="bg-red-500 text-white text-[10px] px-1.5 rounded-full hidden">0</span>
+                    <button onclick="admin.tab('mod')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-red-500 transition flex justify-between">
+                        🛡 Richieste Aneddoti <span id="mod-badge" class="bg-red-500 text-white text-[10px] px-1.5 rounded-full hidden">0</span>
                     </button>
                     <button onclick="admin.tab('history')" class="col-span-2 lg:col-auto w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-purple-500 transition">
                         📜 Diario
