--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div id="nav-admin" class="hidden flex items-center gap-4">
-                    <span class="bg-yellow-500 text-black px-2 py-0.5 rounded text-[10px] font-extrabold uppercase tracking-wider">CAPI</span>
+                    <span class="bg-yellow-500 text-black px-2 py-0.5 rounded text-[10px] font-extrabold uppercase tracking-wider">ADMIN</span>
                     <button onclick="auth.logout()" class="text-xs hover:text-red-300 font-bold uppercase">Esci</button>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                         <span class="text-gray-400 text-lg">🔎</span>
                     </div>
                     <input type="text" id="search-bar" onkeyup="app.filterProducts()" 
-                           placeholder="Cerca (es. Tenda, Accetta...)" 
+                           placeholder="Cerca (es. Promessa, Scoperta...)" 
                            class="w-full pl-10 p-3 border border-gray-300 rounded-xl focus:border-green-600 focus:ring-2 focus:ring-green-100 outline-none transition shadow-sm bg-white text-gray-700 font-bold text-sm">
                     <button onclick="document.getElementById('search-bar').value = ''; app.filterProducts()" class="absolute inset-y-0 right-0 pr-4 text-gray-300 hover:text-red-500 font-bold cursor-pointer">✕</button>
                 </div>
@@ -108,7 +108,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-6">
                 <div class="lg:col-span-1 grid grid-cols-2 lg:flex lg:flex-col gap-2 h-fit">
                     <div class="col-span-2 lg:col-auto bg-white p-3 rounded-lg shadow text-center border-l-4 border-green-600 mb-0 lg:mb-2">
-                        <h2 class="font-bold text-gray-800">Q.G. Capi</h2>
+                        <h2 class="font-bold text-gray-800">Q.G.</h2>
                     </div>
                     <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-green-600 transition">📦 Inventario</button>
                     <button onclick="admin.tab('restock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-blue-500 transition">🚛 Rifornimento</button>
@@ -267,8 +267,8 @@
     <div id="login-modal" class="hidden fixed inset-0 bg-green-900/80 z-50 flex items-center justify-center backdrop-blur-sm p-4">
         <div class="bg-white p-8 rounded-2xl shadow-2xl w-full max-w-sm relative">
             <button onclick="ui.closeModals()" class="absolute top-4 right-4 text-2xl text-gray-300 hover:text-gray-500">&times;</button>
-            <h2 class="text-center font-extrabold text-2xl mb-2 text-green-900">Area Capi</h2>
-            <p class="text-center text-gray-400 text-xs mb-6">Accesso riservato alla Co.Ca.</p>
+            <h2 class="text-center font-extrabold text-2xl mb-2 text-green-900">Area Admin</h2>
+            <p class="text-center text-gray-400 text-xs mb-6">Accesso riservato alla gestione</p>
             <input type="email" id="log-mail" placeholder="Email" class="w-full p-3 border rounded-lg mb-3 bg-gray-50 focus:bg-white transition outline-none focus:ring-2 focus:ring-green-500">
             <input type="password" id="log-pass" placeholder="Password" class="w-full p-3 border rounded-lg mb-6 bg-gray-50 focus:bg-white transition outline-none focus:ring-2 focus:ring-green-500">
             <button onclick="auth.login()" class="w-full bg-green-800 text-white font-bold py-3 rounded-lg hover:bg-green-900 shadow-md">Entra</button>
