--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <button onclick="app.nav('shop')" class="hover:text-yellow-400 transition text-xs md:text-sm font-medium uppercase tracking-wide">Magazzino</button>
                     <button onclick="app.nav('archive')" class="hover:text-yellow-400 transition text-xs md:text-sm font-medium uppercase tracking-wide">Ricordi</button>
                     <button onclick="ui.toggleCart()" class="bg-white text-green-900 px-2 py-1 md:px-3 md:py-1 rounded-full hover:bg-yellow-300 transition flex items-center gap-2 shadow-sm text-xs md:text-sm font-bold border-2 border-transparent hover:border-green-800">
-                        🛒 <span id="cart-count">0</span>
+                        🎒 <span id="cart-count">0</span>
                     </button>
                     <button onclick="ui.modal('login-modal')" class="bg-green-800 hover:bg-green-700 px-2 py-1 md:px-3 rounded text-[10px] md:text-xs font-bold uppercase tracking-wider border border-green-700">Login</button>
                 </div>
