--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                     <button onclick="app.nav('shop')" class="hover:text-yellow-400 transition text-xs md:text-sm font-medium uppercase tracking-wide">Magazzino</button>
                     <button onclick="app.nav('archive')" class="hover:text-yellow-400 transition text-xs md:text-sm font-medium uppercase tracking-wide">Ricordi</button>
                     <button onclick="ui.toggleCart()" class="bg-white text-green-900 px-2 py-1 md:px-3 md:py-1 rounded-full hover:bg-yellow-300 transition flex items-center gap-2 shadow-sm text-xs md:text-sm font-bold border-2 border-transparent hover:border-green-800">
-                        🛒 <span id="cart-count">0</span>
+                        🎒 <span id="cart-count">0</span>
                     </button>
                     <button onclick="ui.modal('login-modal')" class="bg-green-800 hover:bg-green-700 px-2 py-1 md:px-3 rounded text-[10px] md:text-xs font-bold uppercase tracking-wider border border-green-700">Login</button>
                 </div>
 
                 <div id="nav-admin" class="hidden flex items-center gap-4">
-                    <span class="bg-yellow-500 text-black px-2 py-0.5 rounded text-[10px] font-extrabold uppercase tracking-wider">CAPI</span>
+                    <span class="bg-yellow-500 text-black px-2 py-0.5 rounded text-[10px] font-extrabold uppercase tracking-wider">ADMIN</span>
                     <button onclick="auth.logout()" class="text-xs hover:text-red-300 font-bold uppercase">Esci</button>
                 </div>
             </div>
@@ -108,7 +108,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-6">
                 <div class="lg:col-span-1 grid grid-cols-2 lg:flex lg:flex-col gap-2 h-fit">
                     <div class="col-span-2 lg:col-auto bg-white p-3 rounded-lg shadow text-center border-l-4 border-green-600 mb-0 lg:mb-2">
-                        <h2 class="font-bold text-gray-800">Q.G. Capi</h2>
+                        <h2 class="font-bold text-gray-800">Q.G.</h2>
                     </div>
                     <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-green-600 transition">📦 Inventario</button>
                     <button onclick="admin.tab('restock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-blue-500 transition">🚛 Rifornimento</button>
@@ -272,8 +272,8 @@
     <div id="login-modal" class="hidden fixed inset-0 bg-green-900/80 z-50 flex items-center justify-center backdrop-blur-sm p-4">
         <div class="bg-white p-8 rounded-2xl shadow-2xl w-full max-w-sm relative">
             <button onclick="ui.closeModals()" class="absolute top-4 right-4 text-2xl text-gray-300 hover:text-gray-500">&times;</button>
-            <h2 class="text-center font-extrabold text-2xl mb-2 text-green-900">Area Capi</h2>
-            <p class="text-center text-gray-400 text-xs mb-6">Accesso riservato alla Co.Ca.</p>
+            <h2 class="text-center font-extrabold text-2xl mb-2 text-green-900">Area Admin</h2>
+            <p class="text-center text-gray-400 text-xs mb-6">Accesso riservato agli Amministratori</p>
             <input type="email" id="log-mail" placeholder="Email" class="w-full p-3 border rounded-lg mb-3 bg-gray-50 focus:bg-white transition outline-none focus:ring-2 focus:ring-green-500">
             <input type="password" id="log-pass" placeholder="Password" class="w-full p-3 border rounded-lg mb-6 bg-gray-50 focus:bg-white transition outline-none focus:ring-2 focus:ring-green-500">
             <button onclick="auth.login()" class="w-full bg-green-800 text-white font-bold py-3 rounded-lg hover:bg-green-900 shadow-md">Entra</button>
@@ -288,7 +288,7 @@
             <input type="text" id="mem-ev" placeholder="Evento (es. Campo Estivo 2024)" class="w-full p-3 border rounded-lg mb-3 text-sm font-bold">
             <input type="text" id="mem-pl" placeholder="Luogo (es. Base Brownsea)" class="w-full p-3 border rounded-lg mb-3 text-sm">
             <textarea id="mem-tx" rows="4" placeholder="Cosa è successo? Racconta..." class="w-full p-3 border rounded-lg mb-4 text-sm"></textarea>
-            <button onclick="archive.submit()" class="w-full bg-green-600 text-white font-bold py-3 rounded-lg shadow hover:bg-green-700">Invia alla Staff</button>
+            <button onclick="archive.submit()" class="w-full bg-green-600 text-white font-bold py-3 rounded-lg shadow hover:bg-green-700">Invia</button>
         </div>
     </div>
 
