--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                     <button onclick="app.nav('shop'); ui.toggleMenu()" class="text-left text-white font-bold text-lg hover:text-yellow-400 transition flex items-center gap-3">
                         <span>📦</span> Magazzino
                     </button>
+                    <button onclick="app.nav('wishlist'); ui.toggleMenu()" class="text-left text-white font-bold text-lg hover:text-yellow-400 transition flex items-center gap-3">
+                        <span>✨</span> Lista Desideri
+                    </button>
                     <button onclick="app.nav('archive'); ui.toggleMenu()" class="text-left text-white font-bold text-lg hover:text-yellow-400 transition flex items-center gap-3">
                         <span>📸</span> Muretto Ricordi
                     </button>
@@ -131,7 +134,24 @@
             <h3 class="font-bold text-gray-700 mb-3 flex items-center gap-2 text-sm uppercase tracking-wide">📦 Materiale Sfuso <span class="h-px bg-gray-200 flex-grow"></span></h3>
             <div id="shop-products" class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-2 md:gap-4"></div>
         </section>
-
+        <section id="view-wishlist" class="hidden fade-in max-w-4xl mx-auto">
+            <div class="mb-6 border-b border-gray-200 pb-2">
+                <h1 class="text-2xl font-extrabold text-purple-900">Lista dei Desideri</h1>
+                <p class="text-gray-500 text-xs mt-1">Cosa manca in Magazzino? Scrivilo qui e l'Admin provvederà.</p>
+            </div>
+        
+            <div class="bg-purple-50 p-4 rounded-xl border border-purple-100 mb-8 shadow-sm">
+                <h3 class="font-bold text-purple-900 mb-3 flex items-center gap-2">💡 Fai una richiesta</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-3 mb-3">
+                    <input type="text" id="wish-item" placeholder="Cosa serve? (es. 3 Bussole, Specialità Topografo)" class="p-3 border rounded-lg text-sm font-bold w-full">
+                    <input type="text" id="wish-name" placeholder="Chi sei? (es. Akela)" class="p-3 border rounded-lg text-sm w-full">
+                </div>
+                <button onclick="wishlist.add()" class="w-full bg-purple-600 text-white font-bold py-3 rounded-lg shadow hover:bg-purple-700 transition">INVIA RICHIESTA</button>
+            </div>
+        
+            <h3 class="font-bold text-gray-700 text-sm uppercase tracking-wide mb-4">In attesa di acquisto</h3>
+            <div id="wishlist-items" class="grid gap-3 md:grid-cols-2"></div>
+        </section>
         <section id="view-archive" class="hidden fade-in max-w-4xl mx-auto">
             <div class="text-center mb-8 bg-white p-6 rounded-2xl shadow-md border-b-4 border-green-600">
                 <h2 class="text-2xl font-bold text-green-900 mb-1">Muretto dei Ricordi</h2>
