--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
                         <h2 class="font-bold text-gray-800">Q.G.</h2>
                     </div>
                     <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-green-600 transition">📦 Inventario</button>
+                    <button onclick="admin.tab('requests')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-pink-500 transition">
+                        ✨ Gestione Ordini
+                    </button>
                     <button onclick="admin.tab('restock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-blue-500 transition">🚛 Rifornimento</button>
                     <button onclick="admin.tab('packs')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-yellow-500 transition">🎁 Gestione Kit</button>
                     <button onclick="admin.tab('movements')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-teal-500 transition">📊 Movimenti</button>
@@ -202,7 +205,12 @@
 
                         <div id="admin-stock-list" class="divide-y text-sm max-h-[65vh] overflow-y-auto"></div>
                     </div>
-
+                    <div id="admin-tab-requests" class="admin-tab hidden bg-white p-6 rounded-xl shadow border-t-4 border-pink-500">
+                        <h3 class="font-bold text-xl text-pink-900 mb-2">Gestione Richieste</h3>
+                        <p class="text-xs text-gray-500 mb-4">Segna come acquistati gli oggetti o rimuovili.</p>
+                        
+                        <div id="admin-requests-list" class="space-y-2 max-h-[70vh] overflow-y-auto"></div>
+                    </div>
                     <div id="admin-tab-restock" class="admin-tab hidden bg-white p-6 rounded-xl shadow border-t-4 border-blue-500">
                         <h3 class="font-bold text-xl text-blue-900 mb-4">Rifornimento Veloce</h3>
                         <div class="bg-blue-50 p-4 rounded mb-4 flex justify-between items-center sticky top-0 z-10 shadow-sm">
