--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Punto ArchiQuadro | Scout Warehouse</title>
+    <title>Azimut.Arch | Scout Site</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚜️</text></svg>">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -27,7 +27,7 @@
 
     <div id="scout-loader" class="fixed inset-0 bg-green-900 z-[100] flex flex-col items-center justify-center text-white transition-opacity duration-500">
         <div class="text-6xl mb-4 compass-spin">🧭</div>
-        <h2 class="text-2xl font-bold tracking-widest mb-2">ARCHIQUADRO</h2>
+        <h2 class="text-2xl font-bold tracking-widest mb-2">AZIMUT.ARCH</h2>
         <p id="loader-text" class="text-green-200 font-mono text-sm animate-pulse">Sto orientando la cartina...</p>
     </div>
 
@@ -39,7 +39,7 @@
                     <span class="text-yellow-400 text-3xl drop-shadow-md">⚜️</span> 
                     <div class="leading-none">
                         <span class="block text-sm text-green-300 font-light tracking-widest">PUNTO</span>
-                        ARCHIQUADRO
+                        AZIMUT.ARCH
                     </div>
                 </div>
 
@@ -83,7 +83,7 @@
                     </div>
 
                     <button id="btn-login-mobile" onclick="ui.modal('login-modal'); ui.toggleMenu()" class="text-left text-green-200 font-bold text-sm hover:text-white flex items-center gap-3 bg-green-900 p-3 rounded border border-green-700">
-                        <span>🔐</span> Accesso Capi
+                        <span>🔐</span> Accesso Admin
                     </button>
                 </div>
 
