--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                     <div class="flex flex-col gap-4">
                         <button id="nav-btn-shop" onclick="app.nav('shop'); ui.toggleMenu()" class="text-left text-white font-bold text-lg hover:text-yellow-400 transition flex items-center gap-3">
-                            <span>📦</span> Magazzino
+                            <span>📦</span> Armadio
                         </button>
                         <button id="nav-btn-wish" onclick="app.nav('wishlist'); ui.toggleMenu()" class="text-left text-white font-bold text-lg hover:text-yellow-400 transition flex items-center gap-3">
                             <span>✨</span> Lista Desideri
@@ -97,8 +97,8 @@
 
         <section id="view-shop" class="hidden fade-in">
             <div class="mb-4 border-b border-gray-200 pb-2">
-                <h1 class="text-2xl md:text-4xl font-extrabold text-green-900">Magazzino</h1>
-                <p class="text-gray-500 text-xs md:text-sm mt-1">Prendi il necessario, lascia il magazzino un po' migliore di come lo hai trovato.</p>
+                <h1 class="text-2xl md:text-4xl font-extrabold text-green-900">Armadio</h1>
+                <p class="text-gray-500 text-xs md:text-sm mt-1">Prendi il necessario, lascia il mondo un po' migliore di come lo hai trovato.</p>
             </div>
 
             <div id="shop-packs" class="grid grid-cols-1 md:grid-cols-3 gap-3 mb-6"></div>
@@ -134,7 +134,7 @@
         <section id="view-wishlist" class="hidden fade-in max-w-4xl mx-auto">
             <div class="mb-6 border-b border-gray-200 pb-2">
                 <h1 class="text-2xl font-extrabold text-purple-900">Lista dei Desideri</h1>
-                <p class="text-gray-500 text-xs mt-1">Cosa manca in Magazzino? Scrivilo qui e l'Admin provvederà.</p>
+                <p class="text-gray-500 text-xs mt-1">Cosa manca in Armadio? Scrivilo qui e l'Admin provvederà.</p>
             </div>
         
             <div class="bg-purple-50 p-4 rounded-xl border border-purple-100 mb-8 shadow-sm">
