--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="col-span-2 lg:col-auto bg-white p-3 rounded-lg shadow text-center border-l-4 border-green-600 mb-0 lg:mb-2">
                         <h2 class="font-bold text-gray-800">Q.G.</h2>
                     </div>
-                    <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-green-600 transition">📦 Inventario</button>
+                    <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-green-600 transition">📦 Armadio</button>
                     <button onclick="admin.tab('requests')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-pink-500 transition">
                         ✨ Gestione Ordini
                     </button>
@@ -169,7 +169,7 @@
                     
                     <div id="admin-tab-stock" class="admin-tab bg-white p-6 rounded-xl shadow border-t-4 border-green-600">
                         <div class="flex justify-between items-center mb-4">
-                            <h3 class="font-bold text-xl text-green-900">Inventario</h3>
+                            <h3 class="font-bold text-xl text-green-900">Armadio</h3>
                             <button onclick="admin.openNewProd()" class="bg-green-600 text-white px-4 py-2 rounded text-sm font-bold shadow">+ Nuovo</button>
                         </div>
                         
