--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         
                         <div class="bg-yellow-500/10 p-3 rounded border border-yellow-500/30">
                             <span class="text-yellow-400 text-xs font-bold uppercase tracking-widest mb-1 block">Area Staff</span>
-                            <button onclick="app.nav('admin'); ui.toggleMenu()" class="text-left text-white font-bold w-full mb-2 hover:underline">Dashboard Q.G.</button>
+                            <button onclick="app.nav('admin'); ui.toggleMenu()" class="text-left text-white font-bold w-full mb-2 hover:underline">Q.G. Armadio</button>
                             <button onclick="auth.logout()" class="text-left text-red-300 text-sm font-bold w-full hover:text-red-200">Disconnetti</button>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-5 gap-6">
                 <div class="lg:col-span-1 grid grid-cols-2 lg:flex lg:flex-col gap-2 h-fit">
                     <div class="col-span-2 lg:col-auto bg-white p-3 rounded-lg shadow text-center border-l-4 border-green-600 mb-0 lg:mb-2">
-                        <h2 class="font-bold text-gray-800">Q.G.</h2>
+                        <h2 class="font-bold text-gray-800">Q.G. Armadio</h2>
                     </div>
                     <button onclick="admin.tab('stock')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-green-600 transition">📦 Armadio</button>
                     <button onclick="admin.tab('requests')" class="w-full text-left p-3 rounded bg-white hover:bg-green-50 font-bold text-sm text-gray-700 shadow-sm border-l-4 border-transparent hover:border-pink-500 transition">
