--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
                             <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                                 <span class="text-gray-400">🔎</span>
                             </div>
-                            <input type="text" id="movements-search" onkeyup="admin.filterMovements()" 
-                                   placeholder="Cerca nome ragazzo, capo o patacca..." 
-                                   class="w-full pl-10 p-2 border rounded text-sm focus:border-teal-500 outline-none bg-teal-50">
+                           <input type="text" id="movements-search" onkeyup="admin.filterMovements()" 
+                               placeholder="Cerca nome capo o oggetto..." 
+                               class="w-full pl-10 p-2 border rounded text-sm focus:border-teal-500 outline-none bg-teal-50">
                         </div>
                     
                         <div id="movements-list" class="space-y-2 max-h-[70vh] overflow-y-auto"></div>
