--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         .scrollbar-hide::-webkit-scrollbar { display: none; }
         .filter-btn.active { background-color: #166534; color: white; border-color: #166534; }
     </style>
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#14532d">
+    <link rel="apple-touch-icon" href="icon-192.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body class="text-gray-800 h-screen flex flex-col overflow-hidden">
 
