--- a/index.html
+++ b/index.html
@@ -85,12 +85,14 @@
                             <button onclick="auth.logout()" class="text-left text-red-300 text-sm font-bold w-full hover:text-red-200">Disconnetti</button>
                         </div>
                     </div>
-
+                    <button id="btn-install-app" onclick="pwa.install()" class="hidden text-left text-yellow-300 font-bold text-lg hover:text-white transition flex items-center gap-3 mb-4 border-2 border-dashed border-yellow-500/30 p-2 rounded-lg bg-yellow-500/10">
+                        <span>📲</span> Installa App
+                    </button>
                     <button id="btn-login-mobile" onclick="ui.modal('login-modal'); ui.toggleMenu()" class="text-left text-green-200 font-bold text-sm hover:text-white flex items-center gap-3 bg-green-900 p-3 rounded border border-green-700">
                         <span>🔐</span> Accesso Admin
                     </button>
                 </div>
-
+                
                 <div class="mt-auto text-center">
                     <p class="text-[10px] text-green-400 font-mono">"Estote Parati"</p>
                 </div>
