--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="flex items-center justify-between h-16">
                 
-                <div class="flex items-center gap-2 font-bold text-xl tracking-wider cursor-pointer select-none" onclick="location.reload()">
-                    <span class="text-yellow-400 text-3xl drop-shadow-md">⚜️</span> 
-                    <div class="leading-none">
-                        AZIMUT.ARCH
-                    </div>
+            <div class="flex items-center gap-2 font-bold text-xl tracking-wider cursor-pointer select-none" onclick="location.reload()">
+                <img src="icon-192.png" alt="Logo" class="h-10 w-10 object-contain drop-shadow-md">
+                
+                <div class="leading-none">
+                    AZIMUT.ARCH
                 </div>
+            </div>
 
                 <div class="flex items-center gap-4">
                     <button onclick="ui.toggleCart()" class="relative">
