--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <section id="view-shop" class="hidden fade-in">
             <div class="mb-4 border-b border-gray-200 pb-2">
                 <h1 class="text-2xl md:text-4xl font-extrabold text-green-900">Armadio</h1>
-                <p class="text-gray-500 text-xs md:text-sm mt-1">Prendi il necessario, lascia il mondo un po' migliore di come lo hai trovato.</p>
+                <p class="text-gray-500 text-xs md:text-sm mt-1">Solo un piccolo cassetto con le patacche, nulla di più.</p>
             </div>
 
             <div id="shop-packs" class="grid grid-cols-1 md:grid-cols-3 gap-3 mb-6"></div>
