Update and rename index.html to armadio.html

--- a/armadio.html
+++ b/armadio.html
@@ -40,7 +40,7 @@
         <div class="max-w-7xl mx-auto px-4">
             <div class="flex items-center justify-between h-16">
                 
-            <div class="flex items-center gap-2 font-bold text-xl tracking-wider cursor-pointer select-none" onclick="location.reload()">
+            <div class="flex items-center gap-2 font-bold text-xl tracking-wider cursor-pointer select-none" onclick="window.location.href='index.html'">
                 <img src="icon-192.png" alt="Logo" class="h-10 w-10 object-contain drop-shadow-md">
                 
                 <div class="leading-none">
@@ -354,6 +354,6 @@
 
     <div id="toast-container" class="fixed bottom-5 left-1/2 transform -translate-x-1/2 flex flex-col gap-2 z-[150] w-max max-w-sm text-center"></div>
 
-    <script src="script.js"></script>
+    <script src="armadio.js"></script>
 </body>
 </html>
