--- a/cambusa.html
+++ b/cambusa.html
@@ -73,7 +73,7 @@
                 
                     <div id="nav-admin-mobile" class="hidden flex-col gap-4">
                         <div class="bg-yellow-500/10 p-4 rounded-xl border border-yellow-500/30">
-                            <span class="text-yellow-400 text-xs font-bold uppercase tracking-widest mb-2 block">Area Cambusiere</span>
+                            <span class="text-yellow-400 text-xs font-bold uppercase tracking-widest mb-2 block">Area Admin</span>
                             <button onclick="app.nav('admin'); ui.toggleMenu()" class="text-left text-white font-bold w-full mb-3 hover:underline flex items-center gap-2">
                                 <span>🥘</span> Q.G. Cambusa
                             </button>
@@ -88,7 +88,7 @@
                     </div>
 
                     <button id="btn-login-mobile" onclick="ui.modal('login-modal'); ui.toggleMenu()" class="text-left text-orange-200 font-bold text-sm hover:text-white flex items-center gap-3 bg-orange-800 p-3 rounded border border-orange-700 mt-auto">
-                        <span>🔐</span> Accesso Cambusiere
+                        <span>🔐</span> Accesso Admin
                     </button>
                 </div>
             </div>
