--- a/cambusa.html
+++ b/cambusa.html
@@ -269,7 +269,7 @@
     <div id="login-modal" class="hidden fixed inset-0 bg-orange-900/80 z-50 flex items-center justify-center backdrop-blur-sm p-4">
         <div class="bg-white p-8 rounded-2xl shadow-2xl w-full max-w-sm relative">
             <button onclick="ui.closeModals()" class="absolute top-4 right-4 text-2xl text-gray-300">&times;</button>
-            <h2 class="text-center font-extrabold text-2xl mb-2 text-orange-900">Area Cambusa</h2>
+            <h2 class="text-center font-extrabold text-2xl mb-2 text-orange-900">Area Admin</h2>
             <input type="email" id="log-mail" placeholder="Email" class="w-full p-3 border rounded mb-3">
             <input type="password" id="log-pass" placeholder="Password" class="w-full p-3 border rounded mb-6">
             <button onclick="auth.login()" class="w-full bg-orange-800 text-white font-bold py-3 rounded hover:bg-orange-900">Entra</button>
