--- a/cambusa.html
+++ b/cambusa.html
@@ -34,7 +34,7 @@
             <div class="flex items-center justify-between h-16">
                 
                 <div class="flex items-center gap-2 font-bold text-xl tracking-wider cursor-pointer select-none" onclick="window.location.href='index.html'">
-                    <img src="icon-192.png" alt="Logo" class="h-10 w-10 object-contain drop-shadow-md grayscale brightness-200">
+                    <img src="icon-192.png" alt="Logo" class="h-10 w-10 object-contain drop-shadow-md">
                     <div class="leading-none">AZIMUT.ARCH</div>
                 </div>
 
