--- a/cambusa.html
+++ b/cambusa.html
@@ -281,8 +281,8 @@
                     </select>
                 </div>
                 <div class="w-1/3">
-                    <label class="text-xs font-bold text-gray-500 uppercase">Min</label>
-                    <input type="number" step="0.1" id="item-min" class="w-full p-2 border rounded font-mono">
+                    <label class="text-xs font-bold text-gray-500 uppercase">Scadenza</label>
+                    <input type="date" id="item-expiry" class="w-full p-2 border rounded font-mono text-xs">
                 </div>
             </div>
 
